rsvp service tests